--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -10,11 +10,11 @@ teleported-to-mine-after-creation: "&aYou have been teleported to your mine."
 mine-creation-failed: "&cAn error occurred while creating your mine. Contact an admin."
 mine-creation-progress: "&eMine creation in progress... %progress-bar% &e%progress%%"
 mine-creation-completed: "&eCreation completed! %progress-bar% &e100%"
-no-mine: "&cYou don't own a mine"
+no-mine: "&cYou do not own a mine."
 no-other-mine: "&c%player% doesn't own a mine"
 mine-deleted: "&aYour mine has been successfully deleted."
 mine-upgraded: "&aMine successfully upgraded to tier %tier%"
-mine-expanded: "&aVotre mine a été agrandie avec succès! Taille actuelle: &e%size%"
+mine-expanded: "&aYour mine has been expanded! New size: %size%"
 mine-expansion-failed: "&cL'agrandissement de la mine a échoué. Raison: %reason%"
 mine-expansion-max-reached: "&cVotre mine a déjà atteint sa taille maximale (&e%max%&c)."
 mine-expansion-not-enough-xp: "&cVous n'avez pas assez de niveaux d'expérience pour cet agrandissement. Requis: &e%cost%&c."
@@ -141,4 +141,5 @@ titles:
 
 placeholders:
    mine-opened: "Open"
-   mine-closed: "Closed" 
+   mine-closed: "Closed"
+   mine-max-size-reached: "Maximum size reached" 
