--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ cursor/*
 # Deployment scripts
 deploy.ps1
 get-logs.ps1
+get_codacy_issues_privatemines.ps1
+server_logs/
 
 # Plugin source
 edprivatemines-1.9-HOTFIX6/ 
