Ajout de la prise en charge de l'API IPrivateMinesAPI dans la classe PrivateMines, mise à jour de la gestion des statistiques dans les classes Mine et MineManager, et amélioration de la gestion des exceptions dans GUIListener. Refactorisation de la méthode de génération de mines pour un traitement asynchrone et ajout de validations dans le service de persistance des mines. Mise à jour du fichier .gitignore pour exclure les fichiers de rapport et les scripts de redémarrage.

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ get-logs.ps1
 get_codacy_issues_privatemines.ps1
 server_logs/
 codacy_issues_privatemines_*.csv
+rapport_*.txt
+restart_server.bat
 
 # Plugin source
 edprivatemines-1.9-HOTFIX6/ 
